# notas-musicais

./: .readthedocs.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: pepiline.yml
docs/: index.md
docs/stylesheets/: extra.css
docs/templates/: todos.md
notas_musicais/: campo_harmonico.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
