[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.1"
rich = "^13.9.4"

[tool.poetry.scripts]
notas-musicais = "notas_musicais.cli:app"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.14.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.49"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"
mkdocs-macros-plugin = "^1.3.7"
jinja2 = "^3.1.5"
pymdown-extensions = "^10.13"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"


[tool.blue]
line_length = 120 

[tool.isort]
profile = "black"
line_length = 120 

[tool.taskipy.tasks]
lint = "blue . && isort ."
doc = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"
pre_git = "git status && git add ."
git = "git commit -a -m"
post_git = "git push"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
